# deep-coder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  divide_validate_dataset.py  generate_dataset.ipynb  generate_dataset.py  inference.ipynb  inspect_dataset.ipynb  inspect_dataset.py  inspect_model.ipynb  inspect_model.py  inspect_validation_results.ipynb  inspect_validation_results.py  requirements.txt  train.ipynb  train.py  validate.py  validate_baseline.ipynb
examples/: README.md  dot.json  gcj-round1a-2008-a.json  reverse.json
include/: attribute.h  dataset-generator.h  enumerator.h  example-generator.h  find-program.h  parameters.h  random-enumerator.h
lib/: CMakeLists.txt  attribute.cc  dataset-generator.cc  example-generator.cc  find-program.cc  tmp.cc
python/: learner.py  model.py  predictor.py
src/: CMakeLists.txt  chainer_dataset.py  dataset.py  deepcoder_utils.py  dsl.py  generate_dataset.cc  generate_dataset.py  generate_program.cc  generate_testdata.cc  inference.py  model.py  program_generator.py  program_simplifier.py  source_code_generator.py  source_code_simplifier.py  train.py
test/: CMakeLists.txt  attributes-test.cc  dataset-generator-test.cc  enumerator-test.cc  example-generator-test.cc  find-program-test.cc  test_chainer_dataset.py  test_dataset.py  test_dsl.py  test_generate_dataset.py  test_inference.py  test_model.py  test_program_generator.py  test_program_simplifier.py  test_source_code_generator.py  test_source_code_simplifier.py  test_train.py
test/dsl/: ast-test.cc  interpreter-test.cc  type-test.cc  utils-test.cc
(+24 files in other folders)
