add_executable(gen_dataset generate_dataset.cc)
target_link_libraries(gen_dataset deepcoder)
target_link_libraries(gen_dataset pthread)

add_executable(gen_program generate_program.cc)
target_link_libraries(gen_program deepcoder)
target_link_libraries(gen_program pthread)

add_executable(gen_testdata generate_testdata.cc)
target_link_libraries(gen_testdata deepcoder)
target_link_libraries(gen_testdata pthread)
